   AMI Parkinglot events.

 * Added MessageSend command.  This behaves in the same manner as the
   MessageSend application, and is a technolgoy agnostic mechanism to send out
   of call text messages.

 * Added "message" class authorization.  This grants an account permission to
   send out of call messages.  Write-only.


CLI
-------------------
 * The "mixmonitor list <channel>" command will now show MixMonitor ID, and the
   filenames of all running mixmonitors on a channel.

 * The debug level of "pri set debug" is now a bitmask ranging from 0 to 15 if
   numeric instead of 0, 1, or 2.

 * "stun show status" will show a table describing how the STUN client is
   behaving.

 * "acl show [named acl]" will show information regarding a Named ACL.  The
   acl module can be reloaded with "reload acl".

 * Added CLI command to display AMI event information - "manager show events",
   which shows a list of all known and documented AMI events, and "manager show
   event [event name]", which shows detail information about a specific AMI
   event.

 * The result of the CLI command "queue show" now includes the state interface
   information of the queue member.

 * The command "core set verbose" will now set a separate level of logging for
   each remote console without affecting any other console.

 * Added command "cdr show pgsql status" to check connection status

 * "sip show channel" will now display the complete route set.

 * Added "presencestate list" command.  This command will list all custom
   presence states that have been set by using the PRESENCE_STATE dialplan
   function.

 * Added "presencestate change <entity> <state>[,<subtype>[,message[,options]]]"
   command.  This changes a custom presence to a new state.


Codecs
-------------------
 * Codec lists may now be modified by the '!' character, to allow succinct
   specification of a list of codecs allowed and disallowed, without the